# mirea_thrid_semester_cpp

./: .gitignore  README.md
practice1/: main.cpp  makefile
practice1/bitlib/: bit_operations.cpp  bit_operations.h
practice1/bitoutlib/: bitout.cpp  bitout.h
practice1/exec/: program
practice1/test/: CMakeCache.txt  CMakeLists.txt  test_bitlib.cpp
practice2.1/: main.cpp  makefile
practice2.1/exec/: program
practice2.1/filemanagerlib/: filemanager.cpp  filemanager.h
